// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContattiMl /> should render its css w/ props bgcolor 1`] = `
<Section
  bgcolor="red"
>
  <LandingCard__FlexSwitch
    maxWidth="960px"
  >
    <LandingCard__CardBox
      padding="0 30px 0 0"
    >
      <Heading__H3
        color="#fff"
        margin="0"
      >
        I nostri recapiti
      </Heading__H3>
      <Heading__H2
        color="#fff"
        margin="20px auto 0"
      >
        Maieutical Labs
      </Heading__H2>
      <ContattiMl__HalfBox>
        <p>
          <strong>
            Sede operativa
          </strong>
          <br />
          Via Abate Vassalli Eandi 5
          <br />
          10138 • Torino
        </p>
        <p>
          <strong>
            Sede legale
          </strong>
          <br />
          Via Pietro Regis 26
          <br />
           10064 • Pinerolo (TO)
        </p>
        <p>
          <strong>
            Telefono
          </strong>
          <br />
           (+39) 011 19705073
        </p>
      </ContattiMl__HalfBox>
      <ContattiMl__HalfBox>
        <p>
          P. IVA 10623350013
          <br />
          C.F. e n. iscriz.
          <br />
          Reg. Imp. di TO
          <br />
          10623350013
          <br />
          REA: TO -1149034
          <br />
          PEC: maieuticallabs@legalmail.it
          <br />
          Capitale in bilancio: € 11.000
        </p>
      </ContattiMl__HalfBox>
    </LandingCard__CardBox>
    <LandingCard__Image
      role="presentation"
    />
  </LandingCard__FlexSwitch>
</Section>
`;

exports[`<ContattiMl /> should render its css w/ props src 1`] = `
<Section>
  <LandingCard__FlexSwitch
    maxWidth="960px"
  >
    <LandingCard__CardBox
      padding="0 30px 0 0"
    >
      <Heading__H3
        color="#fff"
        margin="0"
      >
        I nostri recapiti
      </Heading__H3>
      <Heading__H2
        color="#fff"
        margin="20px auto 0"
      >
        Maieutical Labs
      </Heading__H2>
      <ContattiMl__HalfBox>
        <p>
          <strong>
            Sede operativa
          </strong>
          <br />
          Via Abate Vassalli Eandi 5
          <br />
          10138 • Torino
        </p>
        <p>
          <strong>
            Sede legale
          </strong>
          <br />
          Via Pietro Regis 26
          <br />
           10064 • Pinerolo (TO)
        </p>
        <p>
          <strong>
            Telefono
          </strong>
          <br />
           (+39) 011 19705073
        </p>
      </ContattiMl__HalfBox>
      <ContattiMl__HalfBox>
        <p>
          P. IVA 10623350013
          <br />
          C.F. e n. iscriz.
          <br />
          Reg. Imp. di TO
          <br />
          10623350013
          <br />
          REA: TO -1149034
          <br />
          PEC: maieuticallabs@legalmail.it
          <br />
          Capitale in bilancio: € 11.000
        </p>
      </ContattiMl__HalfBox>
    </LandingCard__CardBox>
    <LandingCard__Image
      role="presentation"
      src="IMAGE_MOCK"
    />
  </LandingCard__FlexSwitch>
</Section>
`;
